src/snapshots/tptp__top__tests__general_data.snap
---
source: src/top.rs
expression: parsed
---
Atomic(
    Lower(
        LowerWord(
            "c",
        ),
    ),
)
