src/snapshots/tptp__top__tests__general_function.snap
---
source: src/top.rs
expression: parsed
---
GeneralFunction {
    word: Lower(
        LowerWord(
            "atomic",
        ),
    ),
    terms: GeneralTerms(
        [
            Data(
                Variable(
                    Variable(
                        UpperWord(
                            "X",
                        ),
                    ),
                ),
            ),
        ],
    ),
}
