src/snapshots/tptp__top__tests__general_list-3.snap
---
source: src/top.rs
expression: parsed
---
GeneralList(
    Some(
        GeneralTerms(
            [
                Data(
                    Variable(
                        Variable(
                            UpperWord(
                                "X",
                            ),
                        ),
                    ),
                ),
            ],
        ),
    ),
)
