src/snapshots/tptp__top__tests__general_term-3.snap
---
source: src/top.rs
expression: parsed
---
Data(
    Formula(
        Fof(
            Formula(
                Unitary(
                    Atomic(
                        Plain(
                            PlainAtomicFormula(
                                Constant(
                                    Constant(
                                        Functor(
                                            Lower(
                                                LowerWord(
                                                    "p",
                                                ),
                                            ),
                                        ),
                                    ),
                                ),
                            ),
                        ),
                    ),
                ),
            ),
        ),
    ),
)
