src/snapshots/tptp__top__tests__general_term-5.snap
---
source: src/top.rs
expression: parsed
---
Colon(
    Variable(
        Variable(
            UpperWord(
                "X",
            ),
        ),
    ),
    Data(
        Variable(
            Variable(
                UpperWord(
                    "Y",
                ),
            ),
        ),
    ),
)
