src/snapshots/tptp__top__tests__general_term.snap
---
source: src/top.rs
expression: parsed
---
List(
    GeneralList(
        Some(
            GeneralTerms(
                [
                    Data(
                        Variable(
                            Variable(
                                UpperWord(
                                    "X",
                                ),
                            ),
                        ),
                    ),
                    Data(
                        Variable(
                            Variable(
                                UpperWord(
                                    "Y",
                                ),
                            ),
                        ),
                    ),
                ],
            ),
        ),
    ),
)
