src/snapshots/tptp__top__tests__general_terms-3.snap
---
source: src/top.rs
expression: parsed
---
GeneralTerms(
    [
        Data(
            Variable(
                Variable(
                    UpperWord(
                        "X",
                    ),
                ),
            ),
        ),
        Data(
            Variable(
                Variable(
                    UpperWord(
                        "Y",
                    ),
                ),
            ),
        ),
    ],
)
