src/snapshots/tptp__top__tests__general_terms.snap
---
source: src/top.rs
expression: parsed
---
GeneralTerms(
    [
        Data(
            Variable(
                Variable(
                    UpperWord(
                        "X",
                    ),
                ),
            ),
        ),
    ],
)
