src/snapshots/tptp__top__tests__include.snap
---
source: src/top.rs
expression: parsed
---
Include {
    file_name: FileName(
        SingleQuoted(
            "test",
        ),
    ),
    selection: FormulaSelection(
        None,
    ),
}
